# AKE

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  New Text Document.txt  README.md  generate_config.sh  help.txt  main.cpp  master.config  requirements.txt  run.sh  setup.py  start.py  worker.config
APiR/: .clang-format  CMakeLists.txt  add_component_to_module.py  engine_module.cpp  main.cpp
APiR/BMPWriter/: CMakeLists.txt
APiR/BMPWriter/include/: BMPWriter.h
APiR/BMPWriter/src/: BMPWriter.cpp
APiR/CUDACore/: CMakeLists.txt
APiR/CUDACore/src/: CUDAUtils.cpp  HostDevicePtr.cu  MemoryManager.cu
APiR/CUDATest/: CMakeLists.txt
APiR/CUDATest/src/: main.cu
APiR/Common/: CMakeLists.txt
APiR/Common/include/: BFPointSearcher.h  BoundingBox.h  DefinesAndConstants.h  IObject.h  Intersection.h  ParallelUtils.h  ThreadPool.h  Transformable.h  Transformation.h
APiR/Common/py/: BoundingBox_py.hpp  IObject_py.hpp  Intersection_py.hpp  Ray_py.hpp  common_py.hpp
APiR/Common/src/: BFPointSearcher.cpp  BoundingBox.cpp  Intersection.cpp  Randomizer.cpp  Ray.cpp  Simulation.cpp  ThreadPool.cpp  Transformable.cpp  Transformation.cpp
APiR/Fluid/: CMakeLists.txt
APiR/Fluid/include/: Fluid.h  Particle.h  SPHSimulation.h  SPHSpikyKernel.h  SPHStandartKernel.h  SPHSystem.h  StandartParticle.h
APiR/Fluid/py/: Fluid_py.hpp  fluid_module_py.hpp
APiR/Fluid/src/: BFPointSearcher.cpp  Fluid.cpp  Particle.cpp  ParticleSystem.cpp  SPHKernel.cpp  SPHSimulation.cpp  SPHSpikyKernel.cpp  SPHStandartKernel.cpp  SPHSystem.cpp  StandartParticle.cpp
APiR/Fractal/: CMakeLists.txt
APiR/Fractal/src/: ColorMap.cpp  DefaultColorMap.cpp  Fractal.cpp  Fractal.cu  JuliaSet.cpp  LyapunovFractal.cpp  MandelbrotSet.cpp  MandelbrotSet.cu  MappingFunctions.cpp  SmoothColorMap.cpp
APiR/GLUTWindow/: CMakeLists.txt
APiR/GLUTWindow/include/: GLUTWindow.h
APiR/GLUTWindow/src/: FPSCounter.cpp  GLUTWindow.cpp
APiR/Geometry/: CMakeLists.txt
APiR/Geometry.2D/: CMakeLists.txt
APiR/Geometry.2D/src/: Circle.cpp  Rectangle.cpp  Shape.cpp
APiR/Geometry.3D/: CMakeLists.txt
APiR/Geometry.3D/py/: ISurface_py.hpp  Intersection_py.hpp  Ray_py.hpp  Sphere_py.hpp
APiR/Geometry.3D/src/: Cylinder.cpp  ISurface.cpp  Intersection.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Torus.cpp  Transformable.cpp
APiR/Geometry/py/: BoundingBox_py.hpp  ISurface_py.hpp  Intersection_py.hpp  Ray_py.hpp  Sphere_py.hpp
APiR/Geometry/src/: BoundingBox.cpp  Cylinder.cpp  ISurface.cpp  Intersection.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Torus.cpp  Transformable.cpp  Transformable3D.cpp  Transformation.cpp  Transformation3D.cpp
APiR/Image/: CMakeLists.txt
APiR/Image/py/: Image_py.hpp
APiR/Image/src/: Image.cpp
APiR/Main/: CMakeLists.txt
APiR/Main/src/: 2DSceneExample.cpp  3DSceneExample.cpp  ConsoleLogEventListner.cpp  CudaTest.cpp  CudaTest.cu  CudaTest.h  FluidExample.cpp  FractalExample.cpp  OpenCLExample.cpp  SceneExamples.cpp  SimpleCameraController.cpp  WindowExample.cpp  main.cpp
APiR/Math/: CMakeLists.txt
APiR/Math/include/: Matrix.h  Matrix3.h  NMMatrix.h  TransformationMatrix.h  Vector.h
APiR/Math/py/: Vector_py.hpp  math_py.hpp
APiR/Math/src/: SolveEquations.cpp  TransformationMatrix.cpp
APiR/Memory/: CMakeLists.txt
APiR/Memory/src/: MemoryManager.cpp
APiR/OpenCLCore/: CMakeLists.txt
APiR/OpenCLCore/include/: Kernel.h  MandelbrotSetKernel.h  OpenCLEnvironment.h  OpenCLUtils.h
APiR/OpenCLCore/src/: Kernel.cpp  KernelSize.cpp  MandelbrotSetKernel.cpp  OpenCLEnvironment.cpp  OpenCLUtils.cpp
APiR/OpenCLKernel/: CMakeLists.txt
APiR/OpenCLKernel/include/: OpenCLKernel.h
APiR/OpenCLKernel/src/: OpenCLKernel.cl  OpenCLKernel.cpp
APiR/OpenCLKernels/: CMakeLists.txt
APiR/OpenCLKernels/src/: MandelbrotSetKernel.cpp
APiR/Physics/: CMakeLists.txt
APiR/Physics.2D/: CMakeLists.txt
APiR/Physics.2D/src/: Collider2D.cpp  GJKCircleConvex2D.cpp  GJKCollisionDetection2D.cpp  GJKRectangleConvex2D.cpp  GJKTriangleConvex2D.cpp
APiR/Physics/src/: Simulation.cpp
APiR/Primitives/: CMakeLists.txt
APiR/Primitives/include/: Cylinder.h  ISurface.h  Plane.h  Sphere.h  Torus.h
APiR/Primitives/py/: ISurface_py.hpp  Sphere_py.hpp  primitives_py.hpp
APiR/Primitives/src/: Cylinder.cpp  Plane.cpp  Sphere.cpp  Torus.cpp
APiR/Renderer.2D/: CMakeLists.txt
APiR/Renderer.2D/src/: OpenGLRenderer.cpp
APiR/Rendering/: CMakeLists.txt
APiR/Rendering.2D/: CMakeLists.txt
APiR/Rendering.2D/src/: CircleDrawer.cpp  Drawer.cpp  Object2D.cpp  OpenGLRenderer.cpp  RectangleDrawer.cpp  Scene2D.cpp  Triangle2DDrawer.cpp
APiR/Rendering/py/: Camera_py.hpp  IRenderable_py.hpp  Image_py.hpp  RenderableObject_py.hpp  Scene_py.hpp  rendering_py.hpp
APiR/Rendering/src/: CPURayTracer.cpp  CPURenderer.cpp  CUDARayTracer.cpp  Camera.cpp  Container.cpp  IRenderer.cpp  Image.cpp  ImageRenderer.cpp  KDNode.cpp  KDTree.cpp  Object.cpp  RenderableObject.cpp  Scene.cpp  SimpleCamera.cpp
APiR/Scene/: CMakeLists.txt
APiR/Scene/include/: Scene.h
APiR/Scene/py/: Scene_py.hpp  scene_module_py.hpp
APiR/Scene/src/: Scene.cpp
APiR/Visual/: CMakeLists.txt
APiR/Visual/include/: Camera.h  Color.h  ColorMaterial.h  ILight.h  IMaterial.h  IRenderable.h  Image.h  KDNode.h  KDTree.h  RenderableObject.h  SpotLight.h
APiR/Visual/py/: Camera_py.hpp  ColorMaterial_py.hpp  Color_py.hpp  ILight_py.hpp  IMaterial_py.hpp  IRenderable_py.hpp  Image_py.hpp  RenderableObject_py.hpp  SpotLight_py.hpp  light_py.hpp  renderable_py.hpp  visual_py.hpp
APiR/Visual/src/: Camera.cpp  Color.cpp  ColorMaterial.cpp  ILight.cpp  Image.cpp  KDNode.cpp  KDTree.cpp  PhongMaterial.cpp  RenderableObject.cpp  (+1 more)
APiR/Window/: CMakeLists.txt
APiR/World.2D/: CMakeLists.txt
APiR/_template/: CMakeLists.txt  README.txt
GLUTWindow/: CMakeLists.txt
GLUTWindow/include/: GLUTWindow.h
GLUTWindow/src/: GLUTWindow.cpp
Primitives/: CMakeLists.txt
Primitives/include/: Cylinder.h  IObject.h  IntersectionUtilities.h  Plane.h  Ray.h  Sphere.h  Torus.h
Primitives/src/: Cylinder.cpp  IntersectionUtilities.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Torus.cpp
(+551 files in other folders)
